[workspace]
members = ["crates/*", "examples/*", "fuzz"]
default-members = ["crates/revmc-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["DaniPopes <57450786+DaniPopes@users.noreply.github.com>"]
edition = "2021"
rust-version = "1.79"
license = "MIT OR Apache-2.0"
categories = ["compilers", "cryptography::cryptocurrencies"]
keywords = ["compile", "compiler", "jit", "evm", "ethereum"]
homepage = "https://github.com/danipopes/cranelift-jit-evm"
repository = "https://github.com/danipopes/cranelift-jit-evm"
exclude = [".github/", "benches/", "fuzz/", "tests/"]

[workspace.lints.clippy]
dbg-macro = "warn"
manual-string-new = "warn"
uninlined-format-args = "warn"
use-self = "warn"
redundant-clone = "warn"

[workspace.lints.rust]
missing-debug-implementations = "warn"
missing-docs = "warn"
rust-2018-idioms = "warn"
unreachable-pub = "warn"
unused-must-use = "warn"
redundant-lifetimes = "warn"
unnameable-types = "warn"

[workspace.lints.rustdoc]
all = "warn"

[workspace.dependencies]
revmc = { version = "0.1.0", path = "crates/revmc", default-features = false }
revmc-backend = { version = "0.1.0", path = "crates/revmc-backend", default-features = false }
revmc-build = { version = "0.1.0", path = "crates/revmc-build", default-features = false }
revmc-builtins = { version = "0.1.0", path = "crates/revmc-builtins", default-features = false }
revmc-context = { version = "0.1.0", path = "crates/revmc-context", default-features = false }
revmc-cranelift = { version = "0.1.0", path = "crates/revmc-cranelift", default-features = false }
revmc-llvm = { version = "0.1.0", path = "crates/revmc-llvm", default-features = false }

alloy-primitives = { version = "0.8", default-features = false }
revm = { version = "19.0", default-features = false }
revm-primitives = { version = "15.1", default-features = false }
revm-interpreter = { version = "15.0", default-features = false }
ruint = { version = "1.12", default-features = false }

color-eyre = "0.6"
eyre = "0.6"
rustc-hash = "2.1"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-tracy = "0.11"
paste = "1.0"
arbitrary = "1.3"
bitflags = "2.5"
bitvec = "1.0"
cc = "1.0"
clap = "4"
cranelift = "0.116"
cranelift-jit = "0.116"
cranelift-module = "0.116"
cranelift-native = "0.116"
cranelift-object = "0.116"
criterion = { version = "0.5", default-features = false }
either = "1.13"
iai-callgrind = "0.14"
inkwell = "0.5"
libfuzzer-sys = "0.4"
libloading = "0.8"
revmc-cli-tests = { path = "crates/revmc-cli-tests" }
similar-asserts = "1.5"
tempfile = "3.10"
tester = "0.9"
walkdir = "2.5"

[profile.release]
opt-level = 3
lto = true
debug = "line-tables-only"
strip = true
panic = "abort"
codegen-units = 1

# Use the `--profile profiling` flag to show symbols in release mode.
# e.g. `cargo build --profile profiling`
[profile.profiling]
inherits = "release"
debug = 2
strip = false

[profile.bench]
inherits = "profiling"
