[workspace]
members = ["crates/*", "examples/*", "fuzz"]
default-members = ["crates/revmc-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["DaniPopes <57450786+DaniPopes@users.noreply.github.com>"]
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
categories = ["compilers", "cryptography::cryptocurrencies"]
keywords = ["compile", "compiler", "jit", "evm", "ethereum"]
homepage = "https://github.com/danipopes/cranelift-jit-evm"
repository = "https://github.com/danipopes/cranelift-jit-evm"
exclude = [".github/", "benches/", "fuzz/", "tests/"]

[workspace.lints.clippy]
dbg-macro = "warn"
manual-string-new = "warn"
uninlined-format-args = "warn"
use-self = "warn"
redundant-clone = "warn"

[workspace.lints.rust]
missing-debug-implementations = "warn"
missing-docs = "warn"
rust-2018-idioms = "warn"
unreachable-pub = "warn"
unused-must-use = "warn"
redundant-lifetimes = "warn"
unnameable-types = "warn"
unsafe-op-in-unsafe-fn = "allow"

[workspace.lints.rustdoc]
all = "warn"

[workspace.dependencies]
revmc = { version = "0.1.0", path = "crates/revmc", default-features = false }
revmc-backend = { version = "0.1.0", path = "crates/revmc-backend", default-features = false }
revmc-build = { version = "0.1.0", path = "crates/revmc-build", default-features = false }
revmc-builtins = { version = "0.1.0", path = "crates/revmc-builtins", default-features = false }
revmc-context = { version = "0.1.0", path = "crates/revmc-context", default-features = false }
revmc-cranelift = { version = "0.1.0", path = "crates/revmc-cranelift", default-features = false }
revmc-llvm = { version = "0.1.0", path = "crates/revmc-llvm", default-features = false }

alloy-primitives = { version = "1.5", default-features = false }
alloy-evm = { version = "0.29", default-features = false }
revm = { version = "36.0", default-features = false }
revm-primitives = { version = "22.1", default-features = false }
revm-interpreter = { version = "34.0", default-features = false }
revm-bytecode = { version = "9.0", default-features = false, features = ["parse"] }
revm-context-interface = { version = "16.0", default-features = false }
revm-state = { version = "10.0", default-features = false }
ruint = { version = "1.17", default-features = false }

crossbeam-channel = "0.5"
color-eyre = "0.6"
criterion = { package = "codspeed-criterion-compat", version = "4", default-features = false, features = ["cargo_bench_support"] }
eyre = "0.6"
rustc-hash = "2.1"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-tracy = "0.11"
paste = "1.0"

[profile.release]
opt-level = 3
lto = "thin"
debug = "none"
strip = "debuginfo" # "symbols" for less binary size but no backtraces
panic = "abort"
codegen-units = 16

# Use the `--profile profiling` flag to show symbols in release mode.
# e.g. `cargo build --profile profiling`
[profile.profiling]
inherits = "release"
debug = "full"
strip = false

[profile.bench]
inherits = "profiling"

[profile.ethtests]
inherits = "dev"
opt-level = 3
