[package]
name = "revm-jit-backend"
description = "REVM JIT - backend abstraction"
homepage = "https://github.com/danipopes/revm-jit/tree/main/crates/revm-jit-backend"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
ruint.workspace = true
eyre.workspace = true
tracing.workspace = true
