[package]
name = "revm-jit-builtins"
description = "EVM bytecode compiler builtins"
homepage = "https://github.com/danipopes/revm-jit/tree/main/crates/revm-jit-builtins"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
revm-jit-context.workspace = true

revm-primitives.workspace = true
revm-interpreter.workspace = true
paste.workspace = true

revm-jit-backend = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[features]
default = ["std", "ir"]
std = ["revm-jit-context/std", "revm-primitives/std", "revm-interpreter/std"]
ir = ["std", "dep:tracing", "dep:revm-jit-backend"]
