[package]
name = "revm-jit-callbacks-bc"
description = "REVM JIT - LLVM bitcode callbacks build script"
homepage = "https://github.com/danipopes/revm-jit/tree/main/crates/revm-jit-callbacks-bc"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true
