[package]
name = "revm-jit-cli"
description = "EVM bytecode compiler CLI"
homepage = "https://github.com/danipopes/revm-jit/tree/main/crates/revm-jit-cli"
publish = false

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
exclude.workspace = true

[lib]
doc = false

[lints]
workspace = true

[dependencies]
revm-jit.workspace = true

revm-interpreter = { workspace = true, features = ["parse"] }
revm-primitives.workspace = true

clap = { version = "4", features = ["derive"] }
color-eyre.workspace = true
libloading = "0.8"
tracing-error.workspace = true
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }

[dev-dependencies]
criterion = "0.5"
iai-callgrind = "0.10"
revm-jit-cli-tests = { path = "../revm-jit-cli-tests/" }

[build-dependencies]
revm-jit-build.workspace = true

[features]
default = ["llvm", "revm-jit/asm-keccak"]
llvm = ["revm-jit/llvm"]
cranelift = ["revm-jit/cranelift"]

[[bin]]
name = "revm-jit-cli"
path = "src/main.rs"
required-features = ["llvm"]
doc = false

[[bench]]
name = "bench"
path = "benches/bench.rs"
required-features = ["llvm"]
harness = false
doc = false

[[bench]]
name = "iai"
path = "benches/iai.rs"
required-features = ["llvm"]
harness = false
doc = false

[[test]]
name = "tests"
path = "tests.rs"
required-features = ["llvm"]
harness = false
doc = false
