[package]
name = "revm-jit-context"
description = "REVM JIT - runtime context"
homepage = "https://github.com/danipopes/revm-jit/tree/main/crates/revm-jit"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
revm-interpreter = { workspace = true, default-features = false }
revm-primitives = { workspace = true, default-features = false }

[features]
default = ["std"]
alloc = []
std = ["alloc"]
