[package]
name = "revm-jit-context"
description = "EVM bytecode compiler runtime context"
homepage = "https://github.com/danipopes/revm-jit/tree/main/crates/revm-jit-context"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
revm-interpreter = { workspace = true, default-features = false }
revm-primitives = { workspace = true, default-features = false }

[features]
default = ["std"]
std = ["revm-interpreter/std", "revm-primitives/std"]
host-ext-any = []
