[package]
name = "revm-jit-cranelift"
description = "REVM JIT - Cranelift backend"
homepage = "https://github.com/danipopes/revm-jit/tree/main/crates/revm-jit"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
revm-jit-core.workspace = true

revm-primitives.workspace = true

cranelift = "0.105"
cranelift-jit = "0.105"
cranelift-module = "0.105"
cranelift-native = "0.105"

color-eyre.workspace = true
