[package]
name = "revm-jit-cranelift"
description = "EVM bytecode compiler Cranelift backend"
homepage = "https://github.com/danipopes/revm-jit/tree/main/crates/revm-jit-cranelift"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
revm-jit-backend.workspace = true

cranelift = "0.106"
cranelift-jit = "0.106"
cranelift-module = "0.106"
cranelift-native = "0.106"
cranelift-object = "0.106"
