[package]
name = "revm-jit-llvm"
description = "REVM JIT - LLVM backend"
homepage = "https://github.com/danipopes/revm-jit/tree/main/crates/revm-jit-llvm"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
revm-primitives.workspace = true
revm-interpreter.workspace = true

color-eyre = "0.6"
