[package]
name = "revm-jit-llvm"
description = "REVM JIT - LLVM backend"
homepage = "https://github.com/danipopes/revm-jit/tree/main/crates/revm-jit-llvm"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
revm-jit-backend.workspace = true

inkwell = { version = "0.4", default-features = true, features = [
    "target-x86",
    "llvm17-0-prefer-dynamic",
] }
rustc-hash.workspace = true
tracing.workspace = true
