[package]
name = "revm-jit-llvm"
description = "EVM bytecode compiler LLVM backend"
homepage = "https://github.com/danipopes/revm-jit/tree/main/crates/revm-jit-llvm"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
revm-jit-backend.workspace = true

inkwell = { version = "0.4", git = "https://github.com/TheDan64/inkwell", features = [
    "llvm18-0",
] }
rustc-hash.workspace = true
tracing.workspace = true

[features]
prefer-static = ["inkwell/llvm18-0-prefer-static"]
prefer-dynamic = ["inkwell/llvm18-0-prefer-dynamic"]
