[package]
name = "revm-jit-mlir"
description = "EVM bytecode compiler MLIR backend"
homepage = "https://github.com/danipopes/revm-jit/tree/main/crates/revm-jit-mlir"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
revm-jit-backend.workspace = true

melior = { version = "0.18", features = ["ods-dialects"] }
mlir-sys = "0.2.2"
