[package]
name = "revm-jit"
description = "JIT compiler for EVM bytecode"
homepage = "https://github.com/danipopes/revm-jit/tree/main/crates/revm-jit"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
revm-jit-backend.workspace = true
revm-jit-llvm = { workspace = true, optional = true }
revm-jit-cranelift = { workspace = true, optional = true }

revm-interpreter.workspace = true
revm-primitives.workspace = true

bitflags = "2.5"
bitvec = "1"
tracing.workspace = true

[features]
default = ["llvm"]
llvm = ["dep:revm-jit-llvm"]
cranelift = ["dep:revm-jit-cranelift"]

[[bench]]
name = "bench"
path = "benches/bench.rs"
required-features = ["llvm"]
harness = false
