[package]
name = "revm-jit"
description = "JIT compiler for EVM bytecode"
homepage = "https://github.com/danipopes/revm-jit/tree/main/crates/revm-jit"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
revm-jit-backend.workspace = true
revm-jit-builtins = { workspace = true, features = ["ir", "std"] }
revm-jit-context = { workspace = true, features = ["std"] }
revm-jit-cranelift = { workspace = true, optional = true }
revm-jit-llvm = { workspace = true, optional = true }

alloy-primitives.workspace = true
revm-interpreter.workspace = true
revm-primitives.workspace = true

bitflags = "2.5"
bitvec = "1"
rustc-hash.workspace = true
tracing.workspace = true

[dev-dependencies]
revm-jit-context = { workspace = true, features = ["std", "host-ext-any"] }
paste = "1.0"

[features]
default = ["llvm"]
llvm = ["dep:revm-jit-llvm"]
cranelift = ["dep:revm-jit-cranelift"]

asm-keccak = ["alloy-primitives/asm-keccak"]
