[package]
name = "revmc-backend"
description = "EVM bytecode compiler backend abstraction"
homepage = "https://github.com/danipopes/revmc/tree/main/crates/revmc-backend"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
ruint = { workspace = true, features = ["std"] }
eyre.workspace = true
