[package]
name = "revmc-builtins"
description = "EVM bytecode compiler builtins"
homepage = "https://github.com/danipopes/revmc/tree/main/crates/revmc-builtins"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
revmc-context.workspace = true

revm-primitives.workspace = true
revm-interpreter.workspace = true
paste.workspace = true

revmc-backend = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[features]
default = ["std", "ir"]
std = ["revmc-context/std", "revm-primitives/std", "revm-interpreter/std"]
ir = ["std", "dep:tracing", "dep:revmc-backend"]
