[package]
name = "revmc-cli"
description = "EVM bytecode compiler CLI"
homepage = "https://github.com/danipopes/revmc/tree/main/crates/revmc-cli"
publish = false

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
exclude.workspace = true

[lib]
doc = false

[lints]
workspace = true

[dependencies]
revmc.workspace = true
revmc-statetest = { path = "../revmc-statetest" }

revm = { workspace = true, features = ["std", "test-types"] }
revm-interpreter.workspace = true
revm-primitives.workspace = true
revm-bytecode.workspace = true

clap = { version = "4", features = ["derive"] }
color-eyre.workspace = true
libloading = "0.9"
lz-str = "0.2"
open = "5"
urlencoding = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
eyre.workspace = true
revmc-context = { workspace = true, default-features = false }
tracing-subscriber = { workspace = true, features = ["registry", "fmt", "env-filter"] }
tracing-tracy = { workspace = true, optional = true, features = ["demangle"] }

[dev-dependencies]
criterion.workspace = true
revmc-cli-tests = { path = "../revmc-cli-tests/" }
revm = { workspace = true, default-features = false, features = ["std"] }
revm-context-interface.workspace = true
hex = "0.4"

[build-dependencies]
revmc-build.workspace = true

[features]
default = ["llvm-prefer-dynamic", "revmc/asm-keccak"]
llvm = ["revmc/llvm"]
llvm-prefer-static = ["llvm", "revmc/llvm-prefer-static"]
llvm-prefer-dynamic = ["llvm", "revmc/llvm-prefer-dynamic"]
cranelift = ["revmc/cranelift"]

tracy = ["dep:tracing-tracy"]

[[bin]]
name = "revmc"
path = "src/main.rs"
required-features = ["llvm"]
doc = false

[[bench]]
name = "bench"
path = "benches/bench.rs"
required-features = ["llvm"]
harness = false
doc = false

[[test]]
name = "tests"
path = "tests.rs"
required-features = ["llvm"]
harness = false
doc = false
