[package]
name = "revmc-context"
description = "EVM bytecode compiler runtime context"
homepage = "https://github.com/danipopes/revmc/tree/main/crates/revmc-context"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
revm-interpreter.workspace = true
revm-primitives.workspace = true
revm-context = { git = "https://github.com/0xDmtri/revm.git", default-features = false }
revm-context-interface = { git = "https://github.com/0xDmtri/revm.git", default-features = false }

[features]
default = ["std"]
std = ["revm-interpreter/std", "revm-primitives/std"]
host-ext-any = []
