[package]
name = "revmc-context"
description = "EVM bytecode compiler runtime context"
homepage = "https://github.com/danipopes/revmc/tree/main/crates/revmc-context"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
revm-context.workspace = true
revm-context-interface.workspace = true
revm-handler.workspace = true
revm-inspector.workspace = true
revm-interpreter.workspace = true
revm-primitives.workspace = true
revm-state.workspace = true
ruint.workspace = true

[features]
default = ["std"]
std = [
    "revm-context/std",
    "revm-context-interface/std",
    "revm-handler/std",
    "revm-inspector/std",
    "revm-interpreter/std",
    "revm-primitives/std",
    "revm-state/std",
]
