[package]
name = "revmc-evm"
description = "revm EVM wrapper that dispatches to revmc-compiled bytecode"
homepage = "https://github.com/danipopes/revmc/tree/main/crates/revmc-evm"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
revmc-context.workspace = true

revm-context.workspace = true
revm-context-interface.workspace = true
revm-handler.workspace = true
revm-inspector.workspace = true
revm-interpreter.workspace = true
revm-primitives.workspace = true
revm-state.workspace = true

[features]
default = ["std"]
std = [
    "revmc-context/std",
    "revm-context/std",
    "revm-context-interface/std",
    "revm-handler/std",
    "revm-inspector/std",
    "revm-interpreter/std",
    "revm-primitives/std",
    "revm-state/std",
]
