[package]
name = "revmc-llvm"
description = "EVM bytecode compiler LLVM backend"
homepage = "https://github.com/danipopes/revmc/tree/main/crates/revmc-llvm"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
revmc-backend.workspace = true

inkwell = { version = "0.4", features = ["llvm17-0"] }
rustc-hash.workspace = true
tracing.workspace = true

[features]
prefer-static = ["inkwell/llvm17-0-prefer-static"]
prefer-dynamic = ["inkwell/llvm17-0-prefer-dynamic"]
