[package]
name = "revmc-llvm"
description = "EVM bytecode compiler LLVM backend"
homepage = "https://github.com/danipopes/revmc/tree/main/crates/revmc-llvm"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
revmc-backend.workspace = true

inkwell = { git = "https://github.com/TheDan64/inkwell", rev = "d20c58f320d1eee62911ce1a274ed32a6aa99861", features = ["llvm22-1"] }
object = { version = "0.37", default-features = false, features = ["read_core", "elf"] }
rustc-hash.workspace = true
tracing.workspace = true

[features]
prefer-static = ["inkwell/llvm22-1-prefer-static"]
prefer-dynamic = ["inkwell/llvm22-1-prefer-dynamic"]
